--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "utils"]
 	path = utils
-	url = https://github.com/dusty-nv/jetson-utils
+url=https://github.com/Becod/jetson-utils
 	branch = master
 [submodule "python/training/imagenet"]
 	path = python/training/imagenet
